<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="horizontal">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin"
            android:fitsSystemWindows="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_margin_bottom"
                android:layout_marginStart="@dimen/margin"
                android:text="@string/passwordrecover"
                android:textColor="@android:color/black"
                android:textSize="@dimen/label" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_size"
                android:hint="@string/email"
                style="@style/EditTextInputLayoutStyle"
                android:layout_marginBottom="@dimen/input_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/InputTextFont"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnemailrecover"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_button_size"
                android:text="@string/send"
                style="@style/ButtonStyle" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>