<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <LinearLayout
            android:id="@+id/form_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/logo"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logofinalbio"
                app:layout_constraintBottom_toTopOf="@+id/message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_size"
                android:hint="@string/username"
                style="@style/EditTextInputLayoutStyle"
                android:layout_marginBottom="@dimen/input_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:text="fftrujillo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/InputTextFont"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_size"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                style="@style/EditTextInputLayoutStyle"
                android:layout_marginBottom="@dimen/input_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:text="1121818601"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/InputTextFont"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companies"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_size"
                android:hint="@string/company"
                style="@style/DropDownLayoutStyle"
                android:layout_marginBottom="@dimen/input_margin_bottom">

                <AutoCompleteTextView
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    style="@style/InputTextFont"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_button_size"
                android:text="@string/login"
                style="@style/ButtonStyle"/>

            <Button
                android:id="@+id/recoverpassword"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_button_size"
                android:background="@android:color/transparent"
                android:text="@string/recover_password"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>